--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,55 +9,41 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
+    Steps:
+     # Step 1: Checkout the code from the repository
+      - name: Checkout Code
         uses: actions/checkout@v3
-
-      # Updated Docker setup step with proper key handling
-      - name: Set up Docker
-        run: |
-          sudo apt update
-          sudo apt install -y ca-certificates curl gnupg lsb-release
-
-          # Download and dearmor the Docker GPG key
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-          sudo chmod a+r /usr/share/keyrings/docker-archive-keyring.gpg
-
-          # Force using Ubuntu 22.04 (Jammy) repository for Docker
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu jammy stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-
-          sudo apt update
-          sudo apt install -y docker-ce docker-ce-cli containerd.io
-
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t ijeawele/fastapi-app .
-          docker push ijeawele/fastapi-app
-
-      - name: Test SSH Connection
-        run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key && chmod 600 private_key
-          ssh -v -o StrictHostKeyChecking=no -i private_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "echo 'SSH connection successful'"
-          rm -f private_key
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          SERVER_USER: ${{ secrets.SERVER_USER }}
-
-      - name: Deploy to server
-        run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            docker pull ijeawele/fastapi-app:latest
-            docker stop fastapi-app || true
-            docker rm fastapi-app || true
-            docker run -d -p 8000:8000 --name fastapi-app ijeawele/fastapi-app:latest
-          EOF
-          rm -f private_key
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          SERVER_USER: ${{ secrets.SERVER_USER }}
+      # Step 4: SSH into the EC2 instance to deploy the application
+      - name: SSH to EC2 and Deploy
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.PUBLIC_IP }}  # GitHub Secret for EC2 public IP
+          username: ubuntu  # Assuming you are using the default Ubuntu user for EC2
+          key: ${{ secrets.SSH_PRIVATE_KEY }}  # GitHub Secret for SSH private key
+          script: |
+            # Update package index and install dependencies
+            sudo apt-get update -y
+            sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+            # Add Docker's official GPG key
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+            # Install Docker
+            sudo apt-get update -y
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+            # Install Docker Compose
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            # Verify installations
+            docker --version
+            docker-compose --version
+            # Clone the project repository to the EC2 instance
+            cd /home/ubuntu/
+            if [ ! -d "fastapi-book-project" ]; then
+              git clone https://github.com/CeritifiedSurvey/fastapi-book-project.git
+            else
+              cd fastapi-book-project
+              git pull origin main  # Pull latest changes from the main branch
+            fi
+            # Navigate to the project folder and build/restart Docker containers
+            cd /home/ubuntu/fastapi-book-project/
+            sudo docker-compose up -d --build # Rebuild and start containers in detached mode
