--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,12 +9,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    Steps:
-     # Step 1: Checkout the code from the repository
+    steps:
+      # Step 1: Checkout the code from the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 4: SSH into the EC2 instance to deploy the application
+      # Step 2: SSH into the EC2 instance to deploy the application
       - name: SSH to EC2 and Deploy
         uses: appleboy/ssh-action@v0.1.5
         with:
@@ -25,19 +25,22 @@ jobs:
             # Update package index and install dependencies
             sudo apt-get update -y
             sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-            # Add Docker's official GPG key
+
+            # Add Docker's official GPG key and repository
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
             sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-            # Install Docker
+            
+            # Install Docker and Docker Compose
             sudo apt-get update -y
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-            # Install Docker Compose
             sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
+            
             # Verify installations
             docker --version
             docker-compose --version
-            # Clone the project repository to the EC2 instance
+            
+            # Clone or update the project repository
             cd /home/ubuntu/
             if [ ! -d "fastapi-book-project" ]; then
               git clone https://github.com/CeritifiedSurvey/fastapi-book-project.git
@@ -45,6 +48,7 @@ jobs:
               cd fastapi-book-project
               git pull origin main  # Pull latest changes from the main branch
             fi
+            
             # Navigate to the project folder and build/restart Docker containers
             cd /home/ubuntu/fastapi-book-project/
-            sudo docker-compose up -d --build # Rebuild and start containers in detached mode
+            sudo docker-compose up -d --build  # Rebuild and start containers in detached mode
