--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,9 +18,9 @@ jobs:
       - name: SSH to EC2 and Deploy
         uses: appleboy/ssh-action@v0.1.5
         with:
-          host: ${{ secrets.PUBLIC_IP }}
+          host: ${{ secrets.PUBLIC_IP }} # Public IP of the EC2 instance
           username: ubuntu  # Assuming you are using the default Ubuntu user for EC2
-          key: ${{ secrets.SSH_PRIVATE_KEY }} 
+          key: ${{ secrets.SSH_PRIVATE_KEY }} # Private SSH key to authenticate
           script: |
             # Update package index and install dependencies
             sudo apt-get update -y
